@@ -4,9 +4,9 @@
 #
 Summary: A C library for parsing command line parameters.
 Name: popt
-Version: 1.7
+Version: 1.6.1
 Release: 0.1
-Copyright: LGPL
+Copyright: X Consortium
 Group: System Environment/Libraries
 Source: ftp://ftp.redhat.com/pub/redhat/code/popt/popt-%{version}.tar.gz
 BuildRoot: /var/tmp/%{name}root
