@@ -1,7 +1,7 @@
 %define	with_python_subpackage	@WITH_PYTHON_SUBPACKAGE@
 %define	with_bzip2		@WITH_BZIP2@
 %define	with_apidocs		@WITH_APIDOCS@
-%define strip_binaries		0
+%define strip_binaries		1
 
 # XXX legacy requires './' payload prefix to be omitted from rpm packages.
 %define	_noPayloadPrefix	1
@@ -315,6 +315,7 @@ fi
 - handle install chroot's identically throughout the install process.
 - add rpmlib(HeaderLoadSortsTags) for tracking header regions "just in case".
 - create _tmppath on the fly if not present.
+- remove /etc/rpm/macros.db1 configuration file if db3 rebuilt.
 
 * Wed Dec 13 2000 Jeff Johnson <jbj@redhat.com>
 - bump popt version.
