@@ -281,8 +281,8 @@ static void printVersion(void) {
 }
 
 static void printBanner(void) {
-    puts(_("Copyright (C) 1998 - Red Hat Software"));
-    puts(_("This may be freely redistributed under the terms of the GNU GPL"));
+    puts(_("Copyright (C) 1998-2000 - Red Hat, Inc."));
+    puts(_("This program may be freely redistributed under the terms of the GNU GPL"));
 }
 
 static void printUsage(void) {
